--- a/app/src/main/res/layout/layout_offer.xml
+++ b/app/src/main/res/layout/layout_offer.xml
@@ -62,6 +62,19 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"/>
 
+            <Button
+                android:id="@+id/buttonSeeOffer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/textViewCompany"
+                android:text="See Offer"
+                android:textColor="@android:color/black"
+                android:minHeight="0dp"
+                android:onClick="onClickSeeOffer"
+                android:textSize="12dp" />
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
