--- a/app/src/main/res/layout/activity_see_offer.xml
+++ b/app/src/main/res/layout/activity_see_offer.xml
@@ -58,4 +58,11 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"/>
     </RelativeLayout>
+
+    <TableRow
+        android:id="@+id/hr"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#444" />
+
 </LinearLayout>
