--- a/app/src/main/res/layout/layout_offer.xml
+++ b/app/src/main/res/layout/layout_offer.xml
@@ -8,7 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_margin="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="onClickSeeOffer">
 
         <RelativeLayout
             android:layout_width="match_parent"
