--- a/app/src/main/res/menu/activity_toolbar.xml
+++ b/app/src/main/res/menu/activity_toolbar.xml
@@ -13,6 +13,7 @@
         android:icon="@android:drawable/ic_menu_search"
         android:textColor="@color/white"
         android:title="@string/search_hint"
-        app:showAsAction="ifRoom"></item>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView"></item>
 
 </menu>
