--- a/app/src/main/res/layout/layout_offer.xml
+++ b/app/src/main/res/layout/layout_offer.xml
@@ -9,7 +9,8 @@
         android:layout_margin="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClickSeeOffer">
+        android:onClick="onClickSeeOffer"
+        android:id="@+id/cardViewOffer">
 
         <RelativeLayout
             android:layout_width="match_parent"
