--- a/app/src/main/res/layout/layout_offer.xml
+++ b/app/src/main/res/layout/layout_offer.xml
@@ -38,8 +38,8 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/textViewCompany"
-                android:text="@string/company"
+                android:id="@+id/textViewLocation"
+                android:text="@string/location"
                 android:layout_below="@id/textViewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,16 +51,15 @@
                 android:textSize="15sp"/>
 
             <TextView
-                android:id="@+id/textViewLocation"
-                android:text="@string/location"
-                android:layout_below="@id/textViewCompany"
-                android:layout_width="wrap_content"
+                android:id="@+id/textViewDescription"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/imageLogoEnt"
+                android:layout_below="@+id/textViewLocation"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
                 android:layout_toRightOf="@+id/imageLogoEnt"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"/>
+                android:text="@string/location"
+                android:layout_marginTop="10dp" />
 
         </RelativeLayout>
 
