--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="center"
-<<<<<<< HEAD
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:paddingTop="3dp"
-=======
->>>>>>> develop
+    android:paddingTop="3dp">
 
-    >
     <!-- Toolbar declaration-->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/activity_main_toolbar"
