--- a/app/src/main/res/layout/layout_offer.xml
+++ b/app/src/main/res/layout/layout_offer.xml
@@ -53,22 +53,19 @@
                 android:textSize="15sp"/>
 
             <TextView
-                android:id="@+id/textViewDescription"
+                android:id="@+id/textViewCompany"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewLocation"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_toRightOf="@+id/imageLogoEnt"
-<<<<<<< HEAD
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"/>
-=======
+                android:layout_marginLeft="10dp"
                 android:text="@string/location"
-                android:layout_marginTop="10dp" />
+                 />
 
->>>>>>> develop
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
